chore: Add methods to add and remove items in Pedido and findByRequisicaoRestauranteId in PedidoService and PedidoRepository